@@ -1,4 +1,6 @@
 0.1.71
+	- fix bug in make.section (ignored the list, if a list provided)
+	  http://code.google.com/p/r-oce/issues/detail?id=18&q=label:Type-Defect
 	- add oce.edit()
 	- add topo.maritimes dataset
 	- add read.topo(), plot.topo(), and summary.topo()
